crates/strider-analyze/tests/snapshots/v3__mips32le__calls__fib_recursive.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "11" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "14" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\ns0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x400778:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x400778:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "20" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "23" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "20" -> "23" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v25" [color="#888888", style=dashed];
  "v25" -> "23" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v26" [color="#888888", style=dashed];
  "v26" -> "23" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v27" [color="#888888", style=dashed];
  "v27" -> "23" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v28" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v28" [color="#888888", style=dashed];
  "v28" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v29" [color="#888888", style=dashed];
  "v29" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "7" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
